--- a/index.css
+++ b/index.css
@@ -25,24 +25,37 @@ body {
 }
 
 .card-image img {
-    height: auto;
+    height: 100%;
     width: 100%;
     border-radius: 0.5rem;
     margin-bottom: 3px;  
 }
-
-.text h3 {
+.text{
     text-align: center;
+    justify-content: center;
+}
+.text h3 {
     color: hsl(218, 44%, 22%);
     font-weight: 700;
 }
 
 .text p {
-    text-align: center;
     color: hsl(216, 15%, 48%);
     font-weight: 400;
     font-size: 15px;
-  
-    text-align: center;
     margin-bottom: 20px;
+}
+
+
+/* Media Queries for responsiveness */
+@media (min-width: 320px) {
+    .card {
+        width: 50%;
+    }
+}
+
+@media (min-width: 600px) {
+    .card {
+        width: 70%;
+    }
 }
